# obs-test

./: CMakeLists.txt  LibObsConfig.cmake  api-interface.cpp  audio-encoders.cpp  display-helpers.hpp  hotkey-edit.cpp  main.cpp  main.h  mainwindow.h  platform-x11.cpp  properties-view.cpp  qt-display.cpp  qt-wrappers.cpp  record-button.cpp  scene-tree.cpp  source-tree.cpp  source-tree.hpp  window-basic-interaction.cpp  window-basic-interaction.hpp  window-basic-main-outputs.cpp  window-basic-main-outputs.hpp  window-basic-main-transitions.cpp  window-basic-main.cpp  window-basic-main.hpp  window-basic-preview.cpp  window-basic-preview.hpp  window-basic-properties.cpp  window-basic-settings-stream.cpp  window-basic-settings.cpp  window-basic-settings.hpp  window-basic-stats.cpp  window-basic-status-bar.cpp  window-dock.cpp  window-namedialog.cpp  window-projector.cpp
forms/: OBSBasic.ui
